[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.0.34"
git2 = "0.19.0"
hex = "0.4.3"
reqwest = { version = "0.12.8", features = ["blocking"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "1.0.38"                             # error handling
url = "2.5.2"
